--- a/.github/workflows/temp3.yml
+++ b/.github/workflows/temp3.yml
@@ -1,12 +1,8 @@
-name: kakao
+name: temp3
 
 on: 
-  # schedule:
-  #   - cron: '48 */6 * * *'
-  push:
-    branches: ["main"]
   workflow_run:
-    workflows: ["temp1"]
+    workflows: ["temp4"]
     types:
       - completed
 jobs:
