--- a/.github/workflows/temp4.yml
+++ b/.github/workflows/temp4.yml
@@ -1,14 +1,8 @@
-name: kakao
+name: temp4
 
-on: 
-  # schedule:
-  #   - cron: '48 */6 * * *'
-  push:
-    branches: ["main"]
-  workflow_run:
-    workflows: ["temp1"]
-    types:
-      - completed
+on:
+  workflow_dispatch:
+
 jobs:
   cron:
     runs-on: ubuntu-22.04
