--- a/.github/workflows/kakao.yml
+++ b/.github/workflows/kakao.yml
@@ -5,10 +5,10 @@ on:
   #   - cron: '48 */6 * * *'
   push:
     branches: ["main"]
-  # workflow_run:
-  #   workflows: ["temp1"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["temp1"]
+    types:
+      - completed
 jobs:
   cron:
     runs-on: ubuntu-22.04
