깃허브 액션 버그 수정

--- a/.github/workflows/temp4.yml
+++ b/.github/workflows/temp4.yml
@@ -1,7 +1,10 @@
 name: temp4
 
-on:
-  workflow_dispatch:
+on: 
+  workflow_run:
+    workflows: ["temp3"]
+    types:
+      - completed
 
 jobs:
   cron:
