--- a/.github/workflows/kakao.yml
+++ b/.github/workflows/kakao.yml
@@ -3,6 +3,7 @@ name: kakao
 on: 
   schedule:
     - cron: '4 */1 * * *'
+  workflow_dispatch:
   # push:
   #   branches: ["main"]
   # workflow_run:
